# Agenda_Project

./: .gitignore  CMakeLists.txt  README.md  agenda.c  agenda.h  cell.c  cell.h  files.c  files.h  list.c  list.h  main.c  timer.c
CSV_Files/: 1000names_5.csv  names1000.csv  names1000_1.csv  names1000_2.csv  names1000_3.csv  names1000_4.csv  names2000.csv  namesMany.csv  nom_prenom.csv
Complexity/: complexity.c  complexity.h
Source_Files/: agenda.c  agenda.h  autocompletion.c  autocompletion.h  cell.c  cell.h  files.c  files.h  list.c  list.h  timer.c  timer.h
